export interface Appointment {
    id: number,
    name: string,
    date: Date,
    duration: number,
    address: string,
}