export interface Customer {
    first_name: string;
    last_name: string;
    email: string;
    date_of_birth: Date;
}
