@startuml
left to right direction

class Package {
}

class Appointment {
}

class Customer {
}

class Organisator {
}

class Instructor {
}

class Person {
}

Package -left- Appointment
Package "*"--"1" Organisator: < owns
Instructor --|> Person
Customer --|> Person
Offer .. (Package, Appointment)
(Appointment, Instructor) .. AppointmentManagement
(Appointment, Customer) .. Participation
(Package, Customer) .. Purchase
(Person, Person) .. Relative

@enduml